data/derived/fa15/progs/unify/prog3006.ml.out
Characters 14-19:
  let _ = clone "foo" 2;;
                ^^^^^
Error: This expression has type string but an expression was expected of type
         'a -> string
